--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 <body>
     <header>
         <nav>
-            <img src="Assets/images/Logo.png">
-            <a href="index.html">Tendances</a>
-            <a href="search.html">Rechercher un film</a>
+            <img src="Assets/images/Logo.png" alt="Logo CineCesar">
+            <button id="burger-menu" aria-label="Menu">
+                ☰
+            </button>
+            <ul id="nav-ul">
+                <li><a href="index.html">Tendances</a></li>
+                <li><a href="search.html">Rechercher un film</a></li>
+            </ul>
         </nav>
     </header>
+
+    <main>
+        
+    </main>
+    <script src="/Assets/js/index.js"></script>
 </body>
 </html>
