--- a/index.html
+++ b/index.html
@@ -21,8 +21,15 @@
     </header>
 
     <main>
-        
+        <div><p></p></div>
     </main>
+
+    <footer>
+        <p>CinéCesar respecte les droits de propriété intellectuelle et veille à offrir un contenu légal et conforme.</p>
+        <p>Les logos, images et contenus présents sur ce site sont protégés par des droits d'auteur et ne peuvent être utilisés sans autorisation préalable</p>
+        <p>Pour toute question relative aux droits d'auteur ou à l'utilisation de notre contenu, veuillez nous contacter via notre page dédiée.</p>
+        <p>© 2025 CinéCesar. Tous droits réservés. Toute reproduction, même partielle, est interdite.</p>
+    </footer>
     <script src="/Assets/js/index.js"></script>
 </body>
 </html>
