Add 4 static films using API in index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CineCesar</title>
     <link rel="stylesheet" href="Assets/css/index.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 <body>
     <header>
@@ -21,7 +22,7 @@
     </header>
 
     <main>
-        <div><p></p></div>
+        
     </main>
 
     <footer>
@@ -30,6 +31,6 @@
         <p>Pour toute question relative aux droits d'auteur ou à l'utilisation de notre contenu, veuillez nous contacter via notre page dédiée.</p>
         <p>© 2025 CinéCesar. Tous droits réservés. Toute reproduction, même partielle, est interdite.</p>
     </footer>
-    <script src="/Assets/js/index.js"></script>
+    <script src="/Assets/js/index.js" type="module"></script>
 </body>
 </html>
