Feat() : Add a button to load more films in the index

--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
         
     </main>
 
+    <section>
+        <button id="loadMore">📽️ Load more films</button>
+    </section>
+
     <footer>
         <p>CinéCesar respecte les droits de propriété intellectuelle et veille à offrir un contenu légal et conforme.</p>
         <p>Les logos, images et contenus présents sur ce site sont protégés par des droits d'auteur et ne peuvent être utilisés sans autorisation préalable</p>
         <p>Pour toute question relative aux droits d'auteur ou à l'utilisation de notre contenu, veuillez nous contacter via notre page dédiée.</p>
         <p>© 2025 CinéCesar. Tous droits réservés. Toute reproduction, même partielle, est interdite.</p>
     </footer>
-    <script src="/Assets/js/index.js" type="module"></script>
+    <script src="/Assets/js/index/index.js" type="module"></script>
 </body>
 </html>
