Feat() : Display information relative to film on movie.html

--- a/Assets/html/movie.html
+++ b/Assets/html/movie.html
@@ -31,6 +31,6 @@
         <p>Pour toute question relative aux droits d'auteur ou à l'utilisation de notre contenu, veuillez nous contacter via notre page dédiée.</p>
         <p>© 2025 CinéCesar. Tous droits réservés. Toute reproduction, même partielle, est interdite.</p>
     </footer>
-    <script src="../js/movie.js" type="module"></script>
+    <script src="../js/movie/movie.js" type="module"></script>
 </body>
 </html>
