Feat() : Add a search bar with animation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </button>
             <ul id="nav-ul">
                 <li><a href="index.html">Tendances</a></li>
-                <li><a href="search.html">Rechercher un film</a></li>
+                <li><a href="/Assets/html/search.html">Rechercher un film</a></li>
             </ul>
         </nav>
     </header>
