--- a/Assets/html/search.html
+++ b/Assets/html/search.html
@@ -24,6 +24,7 @@
     <div id="searchbar">
         <input id="research" type="search" placeholder="Ex : Titanic">
         <label for="research" aria-required="true">Search a film</label>
+        <img src="../images/search_icon.png"/>
     </div>
 
     <main>
