Feat() : Working search bar

--- a/Assets/html/search.html
+++ b/Assets/html/search.html
@@ -37,6 +37,6 @@
         <p>Pour toute question relative aux droits d'auteur ou à l'utilisation de notre contenu, veuillez nous contacter via notre page dédiée.</p>
         <p>© 2025 CinéCesar. Tous droits réservés. Toute reproduction, même partielle, est interdite.</p>
     </footer>
-    <script src="../js/search.js" type="module"></script>
+    <script src="../js/search/search.js" type="module"></script>
 </body>
 </html>
