Feat() : Can load more research films, add a loading div

--- a/Assets/html/search.html
+++ b/Assets/html/search.html
@@ -31,6 +31,11 @@
         
     </main>
 
+    <section>
+        <button id="loadMore">📽️ Load results</button>
+        <div class="loader"></div>
+    </section>
+
     <footer>
         <p>CinéCesar respecte les droits de propriété intellectuelle et veille à offrir un contenu légal et conforme.</p>
         <p>Les logos, images et contenus présents sur ce site sont protégés par des droits d'auteur et ne peuvent être utilisés sans autorisation préalable</p>
