Fix() : All text are now display in english

--- a/Assets/html/search.html
+++ b/Assets/html/search.html
@@ -15,8 +15,8 @@
                 ☰
             </button>
             <ul id="nav-ul">
-                <li><a href="../../index.html">Tendances</a></li>
-                <li><a href="search.html">Rechercher un film</a></li>
+                <li><a href="../../index.html">Trend</a></li>
+                <li><a href="search.html">Search for a Movie</a></li>
             </ul>
         </nav>
     </header>
@@ -37,10 +37,10 @@
     </section>
 
     <footer>
-        <p>CinéCesar respecte les droits de propriété intellectuelle et veille à offrir un contenu légal et conforme.</p>
-        <p>Les logos, images et contenus présents sur ce site sont protégés par des droits d'auteur et ne peuvent être utilisés sans autorisation préalable</p>
-        <p>Pour toute question relative aux droits d'auteur ou à l'utilisation de notre contenu, veuillez nous contacter via notre page dédiée.</p>
-        <p>© 2025 CinéCesar. Tous droits réservés. Toute reproduction, même partielle, est interdite.</p>
+        <p>CinéCesar respects intellectual property rights and ensures the provision of legal and compliant content.</p>
+        <p>Logos, images, and content on this site are protected by copyright and may not be used without prior authorization.</p>
+        <p>For any questions regarding copyright or the use of our content, please contact us via our dedicated page.</p>
+        <p>© 2025 CinéCesar. All rights reserved. Any reproduction, even partial, is prohibited.</p>
     </footer>
     <script src="../js/search/search.js" type="module"></script>
 </body>
