Fix() : Support on firefox (previously on chrome)

--- a/Assets/html/search.html
+++ b/Assets/html/search.html
@@ -23,7 +23,7 @@
 
     <div id="searchbar">
         <input id="research" type="search" placeholder="Ex : Titanic">
-        <label for="research" aria-required="true">Search a film</label>
+        <label for="research">Search a film</label>
         <img src="../images/search_icon.png" tabindex="0"/>
     </div>
 
